config/objects/Location__c.object
<CustomObject>
    <description>Physical locations connected to accounts.</description>
    <fields>
        <fullName>Address__c</fullName>
        <formula>if(not(isblank( Street_One__c )),Street_One__c,&quot;&quot;) &amp; if(not(isblank(Street_One__c)),BR(),&quot;&quot;) &amp; if(not(isblank(Street_Two__c)),Street_Two__c,&quot;&quot;) &amp; if(not(isblank(Street_Two__c)),BR(),&quot;&quot;) &amp; City__c &amp; &quot;, &quot; &amp; Zip__r.State__r.Name &amp; &quot; &quot; &amp; Zip__r.Name</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The company that owns the location.</description>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Address_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Address Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <label>Lat</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lon__c</fullName>
        <label>Lon</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>A short note describing the requirements of this location.</description>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCMiler_Address__c</fullName>
        <label>PCMiler Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCMiler_City__c</fullName>
        <label>PCMiler City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCMiler_State__c</fullName>
        <label>PCMiler State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCMiler_Zip__c</fullName>
        <label>PCMiler Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_One__c</fullName>
        <label>Street One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Two__c</fullName>
        <label>Street Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Types__c</fullName>
        <label>Types</label>
        <picklist>
            <picklistValues>
                <fullName>Shipper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Zip_Name__c</fullName>
        <label>Zip Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip</label>
        <referenceTo>ZipFive__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>or(ISNULL( Company__c ), isblank( Company__c))</errorConditionFormula>
        <errorMessage>Every location must be attached to a company.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>or(ISNULL( Zip__c ), isblank( Zip__c))</errorConditionFormula>
        <errorMessage>A zip code must be entered.</errorMessage>
    </validationRules>
</CustomObject>